sidebar menu fullscreen on mobile fixed

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -93,7 +93,7 @@
   height: 100%;
   filter: blur(100px) saturate(150%);
   top: 80px;
-  opacity: 0.1;
+  opacity: 0.13;
 }
 @keyframes slide-in {
     0% {
